add a main wrapper around all div add div w/  .nav-section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Rick and Morty Characters</title>
   </head>
   <body>
-    <div class="main-section"></div>
+    <main>
+      <div class="main-section"></div>
+      <div class="nav-section"></div>
+    </main>
     <script src="rickmorty.js"></script>
   </body>
 </html>
