--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <div class="main-section"></div>
       <div class="nav-section"></div>
     </main>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="rickmorty.js"></script>
   </body>
 </html>
