mv card.js file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </main>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="rickmorty.js"></script>
+    <script src="./Card/Card.js" defer></script>
   </body>
 </html>
