--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 	<body>
 		<main>
 			<div class="main-section"></div>
-			<div class="nav-section"></div>
+			<div class="nav-section">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination pagination-lg justify-content-center">
+						<li class="prev-item"><a class="page-link" href="#">Previous</a></li>
+						<li class="next-item"><a class="page-link" href="#">Next</a></li>
+					</ul>
+				</nav>
+			</div>
 		</main>
 
 		<script
